include/fitpack_sphere_c.h

/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief fit
 * @param smoothing 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_fit(fitpack_sphere_c* self, double* smoothing, bool* keep_knots);
/**
 * @brief least_squares
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_least_squares(fitpack_sphere_c* self, double* smoothing, bool* reset_knots);
/**
 * @brief interpolate
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_interpolate(fitpack_sphere_c* self, bool* reset_knots);
/**
 * @brief sphere_eval_one
 * @param theta 
 * @param phi 
 * @param ierr 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_sphere_c_sphere_eval_one(fitpack_sphere_c* self, double theta, double phi, int32_t* ierr);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_comm_size(const fitpack_sphere_c* self);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_sphere_c_mse(const fitpack_sphere_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_core_comm_size(const fitpack_sphere_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_destroy_base(fitpack_sphere_c* self);
/**
 * @brief new_points
 * @param theta 
 * @param phi 
 * @param r 
 * @param w 
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_new_points(fitpack_sphere_c* self, int32_t n, const double* theta, const double* phi, const double* r, double* w);
/**
 * @brief new_fit
 * @param theta 
 * @param phi 
 * @param r 
 * @param w 
 * @param smoothing 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_sphere_c_new_fit(fitpack_sphere_c* self, int32_t n, const double* theta, const double* phi, const double* r, double* w, double* smoothing);
/**
 * @brief sphere_eval_many
 * @param theta 
 * @param phi 
 * @param ierr 
 * @note result: caller-allocated buffer of max_size elements; n_result receives the actual count (= product of (SIZE(phi), SIZE(theta)))
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_sphere_eval_many(fitpack_sphere_c* self, int32_t n, const double* theta, const double* phi, int32_t* ierr, double* result, int32_t* n_result, int32_t max_size);
/**
 * @brief comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_comm_pack(const fitpack_sphere_c* self, int32_t n, double* buffer);
/**
 * @brief comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_comm_expand(fitpack_sphere_c* self, int32_t n, const double* buffer);
/**
 * @brief core_comm_pack
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_core_comm_pack(const fitpack_sphere_c* self, int32_t n, double* buffer);
/**
 * @brief core_comm_expand
 * @param buffer 
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_core_comm_expand(fitpack_sphere_c* self, int32_t n, const double* buffer);
/* ===========================================================================================
 * Component Array Accessors (raw pointer + extents)
 * =========================================================================================== */

/**
 * @brief Borrow the storage of allocatable array component 'theta'.
 *
 * @param self    Object handle
 * @param ptr     Receives the address of the first element, or NULL when the
 *                object or the component is unallocated (also NULL for an
 *                allocated but zero-sized component).
 * @param extents Receives the component's 1 extent(s); all zero when the
 *                component is unallocated.
 * @note The pointer is borrowed, not owned: it is invalidated by any fitting,
 *       assignment or destroy call on the object. Do not free it, and re-read
 *       it after every call that can reallocate the component.
 */
FITPACK_CAPI_EXPORT void fitpack_sphere_c_getcomp_theta(const fitpack_sphere_c* self, double** ptr, int64_t extents[1]);