src/capi/fitpack_sphere_domains_c.f90


    !> Create from Fortran object (optionally as pointer)
    type(fitpack_sphere_c) function fitpack_sphere_c_fptr2c(f, want_pointer) result(c)
        type(fitpack_sphere), intent(inout), target :: f
        logical, intent(in) :: want_pointer

        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_sphere_c_f2c(f)
        end if
    end function fitpack_sphere_c_fptr2c

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> fit
    integer(c_int32_t) function fitpack_sphere_c_fit(this, smoothing, keep_knots) bind(C, name='fitpack_sphere_c_fit')
        type(fitpack_sphere_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_sphere), pointer :: fthis
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_sphere_c_fit = fthis%fit(smoothing=smoothing, keep_knots=f_keep_knots)
            else
                fitpack_sphere_c_fit = fthis%fit(smoothing=smoothing)
            end if
        else
            fitpack_sphere_c_fit = 0
        end if
    end function fitpack_sphere_c_fit

    !> least_squares
    integer(c_int32_t) function fitpack_sphere_c_least_squares(this, smoothing, reset_knots) bind(C,  &
        & name='fitpack_sphere_c_least_squares')
        type(fitpack_sphere_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_sphere), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_sphere_c_least_squares = fthis%least_squares(smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_sphere_c_least_squares = fthis%least_squares(smoothing=smoothing)
            end if
        else
            fitpack_sphere_c_least_squares = 0
        end if
    end function fitpack_sphere_c_least_squares

    !> interpolate
    integer(c_int32_t) function fitpack_sphere_c_interpolate(this, reset_knots) bind(C, name='fitpack_sphere_c_interpolate')
        type(fitpack_sphere_c), intent(in) :: this
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_sphere), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_sphere_c_interpolate = fthis%interpolate(reset_knots=f_reset_knots)
            else
                fitpack_sphere_c_interpolate = fthis%interpolate()
            end if
        else
            fitpack_sphere_c_interpolate = 0
        end if
    end function fitpack_sphere_c_interpolate

    !> sphere_eval_one
    real(c_double) function fitpack_sphere_c_sphere_eval_one(this, theta, phi, ierr) bind(C,  &
        & name='fitpack_sphere_c_sphere_eval_one')
        type(fitpack_sphere_c), intent(in) :: this
        real(c_double), intent(in), value :: theta, phi
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_sphere_eval_one = fthis%eval(theta, phi, ierr)
        else
            fitpack_sphere_c_sphere_eval_one = 0.0_c_double
        end if
    end function fitpack_sphere_c_sphere_eval_one

    !> comm_size
    integer(c_int32_t) function fitpack_sphere_c_comm_size(this) bind(C, name='fitpack_sphere_c_comm_size')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_comm_size = fthis%comm_size()
        else
            fitpack_sphere_c_comm_size = 0
        end if
    end function fitpack_sphere_c_comm_size

    !> mse
    real(c_double) function fitpack_sphere_c_mse(this) bind(C, name='fitpack_sphere_c_mse')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_mse = fthis%mse()
        else
            fitpack_sphere_c_mse = 0.0_c_double
        end if
    end function fitpack_sphere_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_sphere_c_core_comm_size(this) bind(C, name='fitpack_sphere_c_core_comm_size')
        type(fitpack_sphere_c), intent(in) :: this
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_sphere_c_core_comm_size = 0
        end if
    end function fitpack_sphere_c_core_comm_size

    !> destroy_base
    subroutine fitpack_sphere_c_destroy_base(this) bind(C, name='fitpack_sphere_c_destroy_base')
        type(fitpack_sphere_c), intent(inout) :: this
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_sphere_c_destroy_base

    !> new_points
    subroutine fitpack_sphere_c_new_points(this, n, theta, phi, r, w) bind(C, name='fitpack_sphere_c_new_points')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: theta(n)
        real(c_double), intent(in) :: phi(n)
        real(c_double), intent(in) :: r(n)
        real(c_double), optional, intent(in) :: w(n)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%new_points(theta, phi, r, w)
        end if
    end subroutine fitpack_sphere_c_new_points

    !> new_fit
    integer(c_int32_t) function fitpack_sphere_c_new_fit(this, n, theta, phi, r, w, smoothing) bind(C,  &
        & name='fitpack_sphere_c_new_fit')
        type(fitpack_sphere_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: theta(n)
        real(c_double), intent(in) :: phi(n)
        real(c_double), intent(in) :: r(n)
        real(c_double), optional, intent(in) :: w(n)
        real(c_double), intent(in), optional :: smoothing
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_sphere_c_new_fit = fthis%new_fit(theta, phi, r, w, smoothing)
        else
            fitpack_sphere_c_new_fit = 0
        end if
    end function fitpack_sphere_c_new_fit

    !> sphere_eval_many
    subroutine fitpack_sphere_c_sphere_eval_many(this, n, theta, phi, ierr, result, n_result, max_size) bind(C,  &
        & name='fitpack_sphere_c_sphere_eval_many')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: theta(n)
        real(c_double), intent(in) :: phi(n)
        integer(c_int32_t), intent(out), optional :: ierr
        real(c_double), intent(inout) :: result(*)
        integer(c_int32_t), intent(out) :: n_result
        integer(c_int32_t), intent(in), value :: max_size
        real(c_double), allocatable :: fresult(:,:)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fresult = fthis%eval(theta=theta, phi=phi, ierr=ierr)
            n_result = size(fresult)
            result(1:min(n_result, max_size)) = reshape(fresult, [min(n_result, max_size)])
        end if
    end subroutine fitpack_sphere_c_sphere_eval_many

    !> comm_pack
    subroutine fitpack_sphere_c_comm_pack(this, n, buffer) bind(C, name='fitpack_sphere_c_comm_pack')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_sphere_c_comm_pack

    !> comm_expand
    subroutine fitpack_sphere_c_comm_expand(this, n, buffer) bind(C, name='fitpack_sphere_c_comm_expand')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_sphere_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_sphere_c_core_comm_pack(this, n, buffer) bind(C, name='fitpack_sphere_c_core_comm_pack')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_sphere_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_sphere_c_core_comm_expand(this, n, buffer) bind(C, name='fitpack_sphere_c_core_comm_expand')
        type(fitpack_sphere_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_sphere), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_sphere_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================

    !> Raw view of component 'theta': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_sphere_c_getcomp_theta(this, ptr, extents) &
        bind(C, name='fitpack_sphere_c_getcomp_theta')
        type(fitpack_sphere_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_sphere), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%theta)) then
                extents = int(shape(fthis%theta), kind=c_int64_t)
                if (size(fthis%theta) > 0) ptr = c_loc(fthis%theta)
            end if
        end if
    end subroutine fitpack_sphere_c_getcomp_theta
